--- a/css/post-364e42a.css
+++ b/css/post-364e42a.css
@@ -449,6 +449,7 @@
   padding: 0px 0px 0px 120px;
 }
 .elementor-364 .elementor-element.elementor-element-625ada39 {
+  margin-right: 5rem;
   text-align: right;
 }
 .elementor-364
@@ -457,6 +458,7 @@
   color: var(--e-global-color-e64be90);
 }
 .elementor-364 .elementor-element.elementor-element-28305419 {
+  margin-right: 5rem;
   text-align: right;
 }
 .elementor-364
