--- a/css/post-188cbe.css
+++ b/css/post-188cbe.css
@@ -630,6 +630,14 @@ body:not(.rtl)
 }
 
 .elementor-18
+  .elementor-element.elementor-element-ccdee5a.elementor-column.elementor-element[data-element_type="column"]
+  > .elementor-widget-wrap.elementor-element-populated
+  h6
+  p {
+  color: var(--e-global-color-4eb5029);
+}
+
+.elementor-18
   .elementor-element.elementor-element-ccdee5a
   > .elementor-element-populated {
   border-style: dotted;
@@ -1868,7 +1876,7 @@ body:not(.rtl)
   > .elementor-motion-effects-container
   > .elementor-motion-effects-layer {
   background-color: var(--e-global-color-247e669);
-  background-image: url("../jpg/pexels-pixabay-270348.jpg");
+  background-image: url("../jpg/pexels-danny-meneses-943096.jpg");
   background-position: top center;
   background-size: cover;
 }
